Various css fixes on mobile.

--- a/src/components/ShoppingList/ShoppingList.module.css
+++ b/src/components/ShoppingList/ShoppingList.module.css
@@ -145,6 +145,8 @@
   width: 100%;
   height: calc(100vh - var(--mobile-nav-bar-size));
   transition: 0s;
+  backdrop-filter: none;
+  background-color: var(--bg-color);
 }
 
 .shopping-list.mobile .header {
